# the-oxidized-landlord

./: Cargo.toml  sample.html
src/: main.rs
src/conn/: mod.rs  utils.rs  ws.rs
src/conn/ffmpeg/: mod.rs
static/css/: style.css
static/js/: main.js
templates/: sample.html.j2
