[package]
name = "oxidized-landlord"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
base64 = "0.22.1"
mouse-rs = "0.4.2"
rocket = { version = "0.5.1", features = ["json"] }
rocket_dyn_templates = { version = "0.2.0", features = ["minijinja"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["net", "process"] }
tokio-tungstenite = "0.26.1"
webrtc = "0.12.0"
